# wagtail-admin-modals

./: .gitignore  README.md  dev_requirements.txt  pyproject.toml
docs/DocuLinkr/: getting_started.md  index.md  initializing.md  linking.md  merge-main.md  merge-sub.md  serving.md  startdocs.md
docs/Symantex/: advanced.md  errors.md  getting_started.md  index.md  mixins.md  usage.md
docs/wagtail-admin-modals/: basic_usage.md  getting_started.md  index.md  tabbed_usage.md
example_site/: Dockerfile  db.sqlite3  manage.py
example_site/example_site/: urls.py  wsgi.py
example_site/example_site/settings/: base.py  dev.py
example_site/example_site/templates/: base.html
example_site/home/: models.py  views.py  wagtail_hooks.py
example_site/home/static/js/: test_file.js
example_site/home/templates/home/modals/: info_tab.html  settings_tab.html
example_site/home/templates/panels/: test_modal.html
example_site/static/: staticfiles.json
example_site/static/css/: test_file.css  test_file.d649f8e8ee68.css
example_site/static/wagtail_admin_modals/css/: modal-defaults.977f64af6e27.css  modal-defaults.css
example_site/static/wagtail_admin_modals/js/: modal-tabs.28b1fbb2b545.js  modal-tabs.a9b21fa264a1.js  tabs.b9141582778d.js
src/wagtail_admin_modals/: registry.py  urls.py  views.py
src/wagtail_admin_modals/templates/wagtail_admin_modals/: base_modal.html
tests/: test.py
