[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wagtail-admin-modals"
version = "0.1.0"
description = "Supports custom modal workflows for Wagtail admin"
authors = [
  { name = "Nicholas Roy / FormuLearn B.V.", email = "nicholas.roy@formulearn.org" }
]
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-only"
dependencies = [
  "Django>=5.1",
  "wagtail>=6.2"
]

[tool.setuptools.packages.find]
where = ["src"]
